cluster/apps/storage/k10/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasten-io
  labels:
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
